css bug fix - button alignment

--- a/src/app/modules/public-user-view/components/public-user-card/public-user-card.component.scss
+++ b/src/app/modules/public-user-view/components/public-user-card/public-user-card.component.scss
@@ -28,7 +28,7 @@ $card-height: 215px;
     color: #42428B;
   }
   .bio-desc {
-    max-height: 138px;
+    max-height: 90px;
     text-align: justify;
     padding: 0 15px;
     margin-top: 15px;
@@ -63,16 +63,6 @@ $card-height: 215px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border: 1 px yellow solid;
     position: relative !important;
-    &:hover{
-      .image{
-        height:25%;
-        flex:1;
-      }
-      .card-body { 
-        height: 68%;
-        flex:1;
-      }
-    }
     }
    .hovercard {
      display: none;
@@ -108,7 +98,7 @@ $card-height: 215px;
     z-index: 500;
     background: #42428B !important;
     color: white !important;
-    height: $card-height*1.8;
+    height: $card-height*1.9;
     .hovercard {
       display: block;
       color: white !important;
@@ -117,7 +107,15 @@ $card-height: 215px;
       }
     }
     .profile-card {
-      height: $card-height*1.8;
+      height: $card-height*1.9;
+    }
+    .image{
+      height:25%;
+      flex:1;
+    }
+    .card-body { 
+      height: 68%;
+      flex:1;
     }
     .color-on-hover, .conn-done {
       color:yellow;
